--- a/cfg/sourcemod/csgo_models.cfg
+++ b/cfg/sourcemod/csgo_models.cfg
@@ -1,9 +1,9 @@
-// Allow model selection only in the byzone.
+// Allow model selection only in the buyzone.
 // -
 // Default: "1"
 // Minimum: "0.000000"
 // Maximum: "1.000000"
-sm_byzone_only "1"
+sm_buyzone_only "1"
 
 // After how many seconds to disable the model selection. '0 disable timer'
 // -
