--- a/cfg/sourcemod/csgo_models.cfg
+++ b/cfg/sourcemod/csgo_models.cfg
@@ -5,10 +5,15 @@
 // Maximum: "1.000000"
 sm_buyzone_only "1"
 
+// Reload the model's settings config when changing the map?.
+// -
+// Default: "1"
+// Minimum: "0.000000"
+// Maximum: "1.000000"
+sm_map_change_reload_cfg "1"
+
 // After how many seconds to disable the model selection. '0 disable timer'
 // -
-// Default: "0.0"
+// Default: "55.0"
 // Minimum: "0.000000"
 sm_select_skin_time "55.0"
-
-
