--- a/addons/sourcemod/configs/csgo_models_configs/agents.cfg
+++ b/addons/sourcemod/configs/csgo_models_configs/agents.cfg
@@ -2,136 +2,191 @@
 {
 	"Terrorists"
 	{
-		"Balkan [6]"
+		"Dragomir | Sabre"
 		{
-			"flags"	"p"
 			"model_player"	"models/player/custom_player/legacy/tm_balkan_variantf.mdl"
 		}
-		"Balkan [7]"
+		"Maximus | Sabre"
 		{
-			"flags"	"p"
 			"model_player"	"models/player/custom_player/legacy/tm_balkan_varianti.mdl"
 		}
-		"Balkan [8]"
+		"Rezan The Ready | Sabre"
 		{
-			"flags"	"p"
 			"model_player"	"models/player/custom_player/legacy/tm_balkan_variantg.mdl"
 		}
-		"Balkan [9]"
+		"Blackwolf | Sabre"
 		{
-			"flags"	"p"
 			"model_player"	"models/player/custom_player/legacy/tm_balkan_variantj.mdl"
 		}
-		"Balkan [10]"
+		"'The Doctor' Romanov | Sabre"
 		{
-			"flags"	"p"
 			"model_player"	"models/player/custom_player/legacy/tm_balkan_varianth.mdl"
 			"vo_prefix" "balkan_epic"
 		}
-		
-		"Leet [6]"
+		"Rezan the Redshirt | Sabre"
 		{
-			"flags"	"p"
+			"model_player"	"models/player/custom_player/legacy/tm_balkan_variantk.mdl"
+		}
+		"Dragomir | Sabre Footsoldier"
+		{
+			"model_player"	"models/player/custom_player/legacy/tm_balkan_variantl.mdl"
+		}
+		
+		"Ground Rebel  | Elite Crew"
+		{
 			"model_player"	"models/player/custom_player/legacy/tm_leet_variantg.mdl"
 		}
-		"Leet [7]"
+		"Osiris | Elite Crew"
 		{
-			"flags"	"p"
 			"model_player"	"models/player/custom_player/legacy/tm_leet_varianth.mdl"
 		}
-		"Leet [8]"
+		"Prof. Shahmat | Elite Crew"
 		{
-			"flags"	"p"
 			"model_player"	"models/player/custom_player/legacy/tm_leet_varianti.mdl"
 		}
-		"Leet [9]"
+		"The Elite Mr. Muhlik | Elite Crew"
 		{
-			"flags"	"p"
 			"model_player"	"models/player/custom_player/legacy/tm_leet_variantf.mdl"
 			"vo_prefix" "leet_epic"
 		}
 		
-		"Phoenix [6]"
+		"Soldier | Phoenix"
 		{
-			"flags"	"p"
 			"model_player"	"models/player/custom_player/legacy/tm_phoenix_varianth.mdl"
 		}
-		"Phoenix [7]"
+		"Enforcer | Phoenix"
 		{
-			"flags"	"p"
 			"model_player"	"models/player/custom_player/legacy/tm_phoenix_variantf.mdl"
 		}
-		"Phoenix [8]"
+		"Slingshot | Phoenix"
 		{
-			"flags"	"p"
 			"model_player"	"models/player/custom_player/legacy/tm_phoenix_variantg.mdl"
 		}
-		
+		"Street Soldier | Phoenix"
+		{
+			"model_player"	"models/player/custom_player/legacy/tm_phoenix_varianti.mdl"
+		}
+
+		"Sir Bloody Miami Darryl | The Professionals"
+		{
+			"model_player"	"models/player/custom_player/legacy/tm_professional_varf.mdl"
+			"vo_prefix"		"professional_epic"
+		}
+		"Sir Bloody Silent Darryl | The Professionals"
+		{
+			"model_player"	"models/player/custom_player/legacy/tm_professional_varf1.mdl"
+			"vo_prefix"		"professional_epic"
+		}
+		"Sir Bloody Skullhead Darryl | The Professionals"
+		{
+			"model_player"	"models/player/custom_player/legacy/tm_professional_varf2.mdl"
+			"vo_prefix"		"professional_epic"
+		}
+		"Sir Bloody Darryl Royale | The Professionals"
+		{
+			"model_player"	"models/player/custom_player/legacy/tm_professional_varf3.mdl"
+			"vo_prefix"		"professional_epic"
+		}
+		"Sir Bloody Loudmouth Darryl | The Professionals"
+		{
+			"model_player"	"models/player/custom_player/legacy/tm_professional_varf4.mdl"
+			"vo_prefix"		"professional_epic"
+		}
+		"Safecracker Voltzmann | The Professionals"
+		{
+			"model_player"	"models/player/custom_player/legacy/tm_professional_varg.mdl"
+			"vo_prefix"		"professional_fem"
+		}
+
+		"Little Kev | The Professionals"
+		{
+			"model_player"	"models/player/custom_player/legacy/tm_professional_varh.mdl"
+		}
+
+		"Number K | The Professionals"
+		{
+			"model_player"	"models/player/custom_player/legacy/tm_professional_vari.mdl"
+		}
+
+		"Getaway Sally | The Professionals"
+		{
+			"model_player"	"models/player/custom_player/legacy/tm_professional_varj.mdl"
+			"vo_prefix"		"professional_fem"
+		}	
 	}
 	"Counter-Terrorists"
 	{
-		"ST-6 [6]"
+		"3rd Commando Company | KSK"
 		{
-			"flags"	"p"
 			"model_player"	"models/player/custom_player/legacy/ctm_st6_variantk.mdl"
 			"vo_prefix" "ctm_gsg9"
 		}
-		"ST-6 [7]"
+		"Seal Team 6 Soldier | NSWC SEAL"
 		{
-			"flags"	"p"
 			"model_player"	"models/player/custom_player/legacy/ctm_st6_variante.mdl"
 		}
-		"ST-6 [8]"
+		"Buckshot | NSWC SEAL"
 		{
-			"flags"	"p"
 			"model_player"	"models/player/custom_player/legacy/ctm_st6_variantg.mdl"
 		}
-		"ST-6 [9]"
+		"'Two Times' McCoy | USAF TACP"
 		{
-			"flags"	"p"
 			"model_player"	"models/player/custom_player/legacy/ctm_st6_variantm.mdl"
 		}
-		"ST-6 [10]"
+		"Lt. Commander Ricksaw | NSWC SEAL"
 		{
-			"flags"	"p"
 			"model_player"	"models/player/custom_player/legacy/ctm_st6_varianti.mdl"
 			"vo_prefix" "seal_epic"
 		}
 		
-		
-		"FBI [6]"
+		"Operator | FBI SWAT"
 		{
-			"flags"	"p"
 			"model_player"	"models/player/custom_player/legacy/ctm_fbi_variantf.mdl"
 		}
-		"FBI [7]"
+		"Markus Delrow | FBI"
 		{
-			"flags"	"p"
 			"model_player"	"models/player/custom_player/legacy/ctm_fbi_variantg.mdl"
 		}
-		"FBI [8]"
+		"Michael Syfers | FBI Sniper"
 		{
-			"flags"	"p"
 			"model_player"	"models/player/custom_player/legacy/ctm_fbi_varianth.mdl"
 		}
-		"FBI [9]"
+		"Special Agent Ava | FBI"
 		{
-			"flags"	"p"
 			"model_player"	"models/player/custom_player/legacy/ctm_fbi_variantb.mdl"
 			"vo_prefix" "fbihrt_epic"
 		}
 		
-		
-		"IDF [6]"
+		"B Squadron Officer | SAS"
 		{
-			"flags"	"p"
-			"model_player"	"models/player/custom_player/legacy/ctm_idf_variantf.mdl"
-		}
-		
-		"SAS [6]"
-		{
-			"flags"	"p"
 			"model_player"	"models/player/custom_player/legacy/ctm_sas_variantf.mdl"
+		}
+
+		"Cmdr. Mae 'Dead Cold' Jamison | SWAT"
+		{
+			"model_player"	"models/player/custom_player/legacy/ctm_swat_variante.mdl"
+			"vo_prefix"		"swat_epic"
+		}
+		"1st Lieutenant Farlow | SWAT"
+		{
+			"model_player"	"models/player/custom_player/legacy/ctm_swat_variantf.mdl"
+			"vo_prefix"		"swat_fem"
+		}
+		"John 'Van Healen' Kask | SWAT"
+		{
+			"model_player"	"models/player/custom_player/legacy/ctm_swat_variantg.mdl"
+		}
+		"Bio-Haz Specialist | SWAT"
+		{
+			"model_player"	"models/player/custom_player/legacy/ctm_swat_varianth.mdl"
+		}
+		"Sergeant Bombson | SWAT"
+		{
+			"model_player"	"models/player/custom_player/legacy/ctm_swat_varianti.mdl"
+		}
+		"Chem-Haz Specialist | SWAT"
+		{
+			"model_player"	"models/player/custom_player/legacy/ctm_swat_variantj.mdl"
 		}
 	}
 }
