--- a/addons/sourcemod/configs/csgo_models_configs/agents.cfg
+++ b/addons/sourcemod/configs/csgo_models_configs/agents.cfg
@@ -112,7 +112,57 @@
 		{
 			"model_player"	"models/player/custom_player/legacy/tm_professional_varj.mdl"
 			"vo_prefix"		"professional_fem"
-		}	
+		}
+
+		"Crasswater The Forgotten"
+		{
+			"model_player"	"models/player/custom_player/legacy/tm_jungle_raider_variantb.mdl"
+			"vo_prefix"		"jungle_male_epic"
+		}
+		"'Medium Rare' Crasswater"
+		{
+			"model_player"	"models/player/custom_player/legacy/tm_jungle_raider_variantb2.mdl"
+			"vo_prefix"		"jungle_male_epic"
+		}
+		"Vypa Sista of the Revolution"
+		{
+			"model_player"	"models/player/custom_player/legacy/tm_jungle_raider_variante.mdl"
+			"vo_prefix"		"jungle_fem_epic"
+		}
+		"Bloody Darryl The Strapped"
+		{
+			"model_player"	"models/player/custom_player/legacy/tm_professional_varf5.mdl"
+		}
+		"Elite Trapper Solman"
+		{
+			"model_player"	"models/player/custom_player/legacy/tm_jungle_raider_varianta.mdl"
+			"vo_prefix"		"jungle_male"
+		}
+		"Arno The Overgrown"
+		{
+			"model_player"	"models/player/custom_player/legacy/tm_jungle_raider_variantc.mdl"
+			"vo_prefix"		"jungle_male"
+		}
+		"Col. Mangos Dabisi"
+		{
+			"model_player"	"models/player/custom_player/legacy/tm_jungle_raider_variantd.mdl"
+			"vo_prefix"		"jungle_male"
+		}
+		"Trapper"
+		{
+			"model_player"	"models/player/custom_player/legacy/tm_jungle_raider_variantf2.mdl"
+			"vo_prefix"		"jungle_male"
+		}
+		"Jungle Rebel"
+		{
+			"model_player"	"models/player/custom_player/legacy/tm_leet_variantj.mdl"
+			"vo_prefix"		"leet_epic"
+		}
+		"Trapper Aggressor"
+		{
+			"model_player"	"models/player/custom_player/legacy/tm_jungle_raider_variantf.mdl"
+			"vo_prefix"		"jungle_male"
+		}		
 	}
 	"Counter-Terrorists"
 	{
@@ -195,5 +245,59 @@
 			"model_player"	"models/player/custom_player/legacy/ctm_swat_variantj.mdl"
 			"arms"			"models/weapons/v_models/arms/glove_hardknuckle/v_glove_hardknuckle_black.mdl"
 		}
+
+		"Chef d'Escadron Rouchard"
+		{
+			"model_player"	"models/player/custom_player/legacy/ctm_gendarmerie_variantc.mdl"
+			"vo_prefix"		"gendarmerie_fem_epic"
+		}
+		"Cmdr. Davida 'Goggles' Fernandez"
+		{
+			"model_player"	"models/player/custom_player/legacy/ctm_diver_varianta.mdl"
+			"vo_prefix"		"seal_fem"
+		}
+		"Cmdr. Frank 'Wet Box' Baroud"
+		{
+			"model_player"	"models/player/custom_player/legacy/ctm_diver_variantb.mdl"
+			"vo_prefix"		"seal_diver_01"
+		}
+		"Lieutenant Rex Krikey"
+		{
+			"model_player"	"models/player/custom_player/legacy/ctm_diver_variantc.mdl"
+			"vo_prefix"		"seal_diver_02"
+		}
+		"Chem-Haz Capitaine"
+		{
+			"model_player"	"models/player/custom_player/legacy/ctm_gendarmerie_variantb.mdl"
+			"vo_prefix"		"gendarmerie_male"
+		}
+		"Sous-Lieutenant Medic"
+		{
+			"model_player"	"models/player/custom_player/legacy/ctm_gendarmerie_varianta.mdl"
+			"vo_prefix"		"gendarmerie_male"
+		}
+		"Officer Jacques Beltram"
+		{
+			"model_player"	"models/player/custom_player/legacy/ctm_gendarmerie_variante.mdl"
+			"vo_prefix"		"gendarmerie_male"
+		}
+		"Lieutenant 'Tree Hugger' Farlow"
+		{
+			"model_player"	"models/player/custom_player/legacy/ctm_swat_variantk.mdl"
+			"vo_prefix"		"swat_fem"
+		}
+		"Primeiro Tenente"
+		{
+			"model_player"	"models/player/custom_player/legacy/ctm_st6_variantn.mdl"
+		}
+		"Aspirant"
+		{
+			"model_player"	"models/player/custom_player/legacy/ctm_gendarmerie_variantd.mdl"
+			"vo_prefix"		"gendarmerie_male"
+		}
+		"D Squadron Officer"
+		{
+			"model_player"	"models/player/custom_player/legacy/ctm_sas_variantg.mdl"
+		}		
 	}
 }
