--- a/addons/sourcemod/configs/csgo_models_configs/agents.cfg
+++ b/addons/sourcemod/configs/csgo_models_configs/agents.cfg
@@ -114,51 +114,52 @@
 			"vo_prefix"		"professional_fem"
 		}
 
-		"Crasswater The Forgotten"
+		"Crasswater The Forgotten | Guerrilla Warfare"
 		{
 			"model_player"	"models/player/custom_player/legacy/tm_jungle_raider_variantb.mdl"
 			"vo_prefix"		"jungle_male_epic"
 		}
-		"'Medium Rare' Crasswater"
+		"'Medium Rare' Crasswater | Guerrilla Warfare"
 		{
 			"model_player"	"models/player/custom_player/legacy/tm_jungle_raider_variantb2.mdl"
 			"vo_prefix"		"jungle_male_epic"
 		}
-		"Vypa Sista of the Revolution"
+		"Vypa Sista of the Revolution | Guerrilla Warfare"
 		{
 			"model_player"	"models/player/custom_player/legacy/tm_jungle_raider_variante.mdl"
 			"vo_prefix"		"jungle_fem_epic"
 		}
-		"Bloody Darryl The Strapped"
+		"Bloody Darryl The Strapped | The Professionals"
 		{
 			"model_player"	"models/player/custom_player/legacy/tm_professional_varf5.mdl"
+			"vo_prefix"		"professional_epic"
 		}
-		"Elite Trapper Solman"
+		"Elite Trapper Solman | Guerrilla Warfare"
 		{
 			"model_player"	"models/player/custom_player/legacy/tm_jungle_raider_varianta.mdl"
 			"vo_prefix"		"jungle_male"
 		}
-		"Arno The Overgrown"
+		"Arno The Overgrown | Guerrilla Warfare"
 		{
 			"model_player"	"models/player/custom_player/legacy/tm_jungle_raider_variantc.mdl"
 			"vo_prefix"		"jungle_male"
 		}
-		"Col. Mangos Dabisi"
+		"Col. Mangos Dabisi | Guerrilla Warfare"
 		{
 			"model_player"	"models/player/custom_player/legacy/tm_jungle_raider_variantd.mdl"
 			"vo_prefix"		"jungle_male"
 		}
-		"Trapper"
+		"Trapper | Guerrilla Warfare"
 		{
 			"model_player"	"models/player/custom_player/legacy/tm_jungle_raider_variantf2.mdl"
 			"vo_prefix"		"jungle_male"
 		}
-		"Jungle Rebel"
+		"Jungle Rebel | Elite Crew"
 		{
 			"model_player"	"models/player/custom_player/legacy/tm_leet_variantj.mdl"
 			"vo_prefix"		"leet_epic"
 		}
-		"Trapper Aggressor"
+		"Trapper Aggressor | Guerrilla Warfare"
 		{
 			"model_player"	"models/player/custom_player/legacy/tm_jungle_raider_variantf.mdl"
 			"vo_prefix"		"jungle_male"
@@ -246,58 +247,59 @@
 			"arms"			"models/weapons/v_models/arms/glove_hardknuckle/v_glove_hardknuckle_black.mdl"
 		}
 
-		"Chef d'Escadron Rouchard"
+		"Chef d'Escadron Rouchard | Gendarmerie Nationale"
 		{
 			"model_player"	"models/player/custom_player/legacy/ctm_gendarmerie_variantc.mdl"
 			"vo_prefix"		"gendarmerie_fem_epic"
 		}
-		"Cmdr. Davida 'Goggles' Fernandez"
+		"Cmdr. Davida 'Goggles' Fernandez | SEAL Frogman"
 		{
 			"model_player"	"models/player/custom_player/legacy/ctm_diver_varianta.mdl"
 			"vo_prefix"		"seal_fem"
 		}
-		"Cmdr. Frank 'Wet Box' Baroud"
+		"Cmdr. Frank 'Wet Sox' Baroud | SEAL Frogman"
 		{
 			"model_player"	"models/player/custom_player/legacy/ctm_diver_variantb.mdl"
 			"vo_prefix"		"seal_diver_01"
 		}
-		"Lieutenant Rex Krikey"
+		"Lieutenant Rex Krikey | SEAL Frogman"
 		{
 			"model_player"	"models/player/custom_player/legacy/ctm_diver_variantc.mdl"
 			"vo_prefix"		"seal_diver_02"
 		}
-		"Chem-Haz Capitaine"
+		"Chem-Haz Capitaine | Gendarmerie Nationale"
 		{
 			"model_player"	"models/player/custom_player/legacy/ctm_gendarmerie_variantb.mdl"
 			"vo_prefix"		"gendarmerie_male"
 		}
-		"Sous-Lieutenant Medic"
+		"Sous-Lieutenant Medic | Gendarmerie Nationale"
 		{
 			"model_player"	"models/player/custom_player/legacy/ctm_gendarmerie_varianta.mdl"
 			"vo_prefix"		"gendarmerie_male"
 		}
-		"Officer Jacques Beltram"
+		"Officer Jacques Beltram | Gendarmerie Nationale"
 		{
 			"model_player"	"models/player/custom_player/legacy/ctm_gendarmerie_variante.mdl"
 			"vo_prefix"		"gendarmerie_male"
 		}
-		"Lieutenant 'Tree Hugger' Farlow"
+		"Lieutenant 'Tree Hugger' Farlow | SWAT"
 		{
 			"model_player"	"models/player/custom_player/legacy/ctm_swat_variantk.mdl"
 			"vo_prefix"		"swat_fem"
 		}
-		"Primeiro Tenente"
+		"Primeiro Tenente | Brazilian 1st Battalion"
 		{
 			"model_player"	"models/player/custom_player/legacy/ctm_st6_variantn.mdl"
 		}
-		"Aspirant"
+		"Aspirant | Gendarmerie Nationale"
 		{
 			"model_player"	"models/player/custom_player/legacy/ctm_gendarmerie_variantd.mdl"
 			"vo_prefix"		"gendarmerie_male"
 		}
-		"D Squadron Officer"
+		"D Squadron Officer | NZSAS"
 		{
 			"model_player"	"models/player/custom_player/legacy/ctm_sas_variantg.mdl"
+			"arms"			"models/weapons/v_models/arms/glove_hardknuckle/v_glove_hardknuckle_black.mdl"
 		}		
 	}
 }
